--- a/DroidconBoston/Podfile
+++ b/DroidconBoston/Podfile
@@ -5,4 +5,5 @@ use_frameworks!
 target 'DroidconBoston' do
     pod 'Alamofire', '~> 4.4'
     pod 'AlamofireImage', '~> 3.1'
+    pod 'XLPagerTabStrip', '~> 7.0'
 end
