--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.53.0"
+    "react-native": "0.53.0",
+    "react-native-navigation": "^1.1.374"
   },
   "devDependencies": {
     "babel-jest": "22.2.0",
