--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.0",
+    "react-native-firebase": "^3.2.4",
     "react-native-navigation": "^1.1.374"
   },
   "devDependencies": {
