--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "immutable": "^3.8.2",
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-firebase": "^3.2.4",
     "react-native-navigation": "^1.1.374",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.2.0",
