--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.53.0",
     "react-native-firebase": "^3.2.4",
     "react-native-navigation": "^1.1.374",
+    "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
