--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "immutable": "^3.8.2",
+    "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-firebase": "^3.2.4",
+    "react-native-gesture-handler": "^1.0.0-alpha.40",
     "react-native-navigation": "^1.1.374",
+    "react-native-tab-view": "^0.0.74",
     "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-jest": "22.2.0",
