--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "babel-jest": "22.2.0",
