use react-native-fast-image for better image caching

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
+    compile project(':react-native-fast-image')
     compile project(':react-native-vector-icons')
     compile(project(':react-native-firebase')) {
         transitive = false
