update react-native to 0.57.8, and all other dependencies in order to get it to build

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "immutable": "^3.8.2",
     "moment": "^2.20.1",
     "query-string": "^6.0.0",
-    "react": "16.2.0",
-    "react-native": "0.53.0",
-    "react-native-fast-image": "^3.0.2",
-    "react-native-firebase": "^3.2.4",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-fast-image": "5.1.2",
+    "react-native-firebase": "5.2.0",
     "react-native-gesture-handler": "^1.0.0-alpha.40",
     "react-native-navigation": "^1.1.374",
     "react-native-tab-view": "^0.0.74",
-    "react-native-vector-icons": "^4.5.0",
+    "react-native-vector-icons": "6.1.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
