--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-fast-image": "5.1.2",
     "react-native-firebase": "5.2.0",
     "react-native-gesture-handler": "^1.0.0-alpha.40",
+    "react-native-google-signin": "^1.2.1",
     "react-native-navigation": "2.8.0",
     "react-native-tab-view": "^0.0.74",
     "react-native-vector-icons": "6.2.0",
