--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,5 +6,7 @@ target 'DroidconBoston' do
   # use_frameworks!
   pod 'Firebase/Core'
   pod 'Firebase/Database'
+  pod 'Firebase/Auth'
+  pod 'GoogleSignIn'
 
 end
